--- a/front-end/src/app/components/business/business.component.html
+++ b/front-end/src/app/components/business/business.component.html
@@ -102,7 +102,7 @@ P.S. Revisions are included. I'm not happy until you are!
         <div class="container-fluid">
                 <div class="col" >
                     <div id="fixedDiv">
-                        <button type="button" id="btn-chat" class="btn btn-outline-success" >    <mat-icon id="icn-chat">chat</mat-icon>
+                        <button type="button" id="btn-chat" (click)="openChat()" class="btn btn-outline-success" >    <mat-icon id="icn-chat">chat</mat-icon>
                             Contact</button>
                         <div class="col" >
                             <div class=""style="max-width: 300px ;">
