--- a/front-end/src/app/components/footer/footer.component.html
+++ b/front-end/src/app/components/footer/footer.component.html
@@ -1,54 +1,42 @@
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
 <footer class="page-footer font-small cyan darken-3">
 
   <!-- Footer Elements -->
-  <div class="container">
-
-    <!-- Grid row-->
-    <div class="row">
-
-      <!-- Grid column -->
-      <div class="col-md-12 py-5">
-        <div class="mb-5 flex-center">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fa fa-facebook-f fa-2x"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Pinterest-->
-          <a class="pin-ic">
-            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-          </a>
-        </div>
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row-->
-
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    
+    <!-- Section: Social media -->
   </div>
-  <!-- Footer Elements -->
+  <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2022 Copyright:
-    <a href="/"> MbaroPune.com</a>
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">MbaroPune.com</a>
   </div>
-  <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
+
+<!-- <a class="fb-ic">
+  <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-3x"></i>
+</a>
+
+<a class="tw-ic">
+  <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-3x"> </i>
+</a>
+
+<a class="gplus-ic">
+  <i class="fa fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-3x"> </i>
+</a>
+
+<a class="li-ic">
+  <i class="fa fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-3x"> </i>
+
+<a class="ins-ic">
+  <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+</a>
+
+<a class="pin-ic">
+  <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>
+</a> -->
