--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -1,3 +1,5 @@
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet"
+>
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'">
@@ -5,11 +7,11 @@
         <h2>MENU</h2>
       </button></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="home"> <i class="fa fa-handshake fa-fw"></i>&nbsp;&nbsp;How It Works</a>
-      <a mat-list-item href="case"> <i class="fa fa-info-circle fa-fw"></i>&nbsp;&nbsp;About Mbaro Pune</a>
+      <a mat-list-item href="home"> <i class="fa fa-handshake-o fa-fw"></i>&nbsp;&nbsp;How It Works</a>
+      <a mat-list-item href="case"> <i class="fa fa-info-circle fa-fw" aria-hidden="true"></i>&nbsp;&nbsp;About Mbaro Pune</a>
       <a mat-list-item href="vacation"> <i class="fas fa-book fa-fw"></i>&nbsp;&nbsp;Why Mbaro Pune</a>
-      <a mat-list-item href="schedule"> <i class="fas fa-money-bill-alt fa-fw"></i>&nbsp;&nbsp;Pricing</a>
-      <a mat-list-item href="login"> <i class="fa fa-user fa-fw"></i>&nbsp;&nbsp;Log In</a>
+      <a mat-list-item href="schedule"> <i class="fa fa-money fa-fw" aria-hidden="true"></i>&nbsp;&nbsp;Pricing</a>
+      <a *ngIf="!userLoggedIn" mat-list-item href="login"> <i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;&nbsp;Log In</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -26,9 +28,9 @@
       <div   class="col" style="text-align:right">
       </div>
         <span *ngIf="!userLoggedIn"  class="example-spacer"></span>
-      <a *ngIf="!userLoggedIn" mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" href="signup" tabindex="-1" role="button" >Register
+      <a *ngIf="!(userLoggedIn)" mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" href="signup" tabindex="-1" role="button" >Register
       </a>
-      <div *ngIf="userLoggedIn" class="row mr-2 ml-auto">
+      <div *ngIf="(userLoggedIn )" class="row mr-2 ml-auto">
         <ul class="row m-0 align-items-center">
           <li>
             <button
@@ -44,8 +46,14 @@
               >
             </button>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item>
-                <mat-icon>exit_to_app</mat-icon>Logout
+              <button (click)="goPost()" mat-menu-item>
+                <i class="fa fa-plus-square-o fa-fw" aria-hidden="true"></i>Post AD
+              </button>
+              <button (click)="goProfile()" mat-menu-item>
+                <i class="fa fa-user fa-fw" aria-hidden="true"></i>Profile
+              </button>
+              <button (click)="handleLogout()" mat-menu-item>
+                <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Logout
               </button>
             </mat-menu>
           </li>
