--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -14,7 +14,7 @@
                         <img src="../../../assets/images/NicePng_gray-circle-png_1366211.png" id="dp"  alt="" class="user-image mr-1 p-2" />
                         <div class="p-2">Bussiness name
                             <div class="d-flex flex-row">
-                                <button type="button" class="btn btn-link" id="btn-see" (click)="seeBusiness()">See more</button>
+                                <button type="button" class="btn btn-link" id="btn-see" (click)="seeBusiness()">See more/Pay</button>
                             </div>
                         </div>
 
@@ -71,6 +71,6 @@
           </tr>
         </table>
 
-        <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> -->
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
       </div>
 
