--- a/front-end/src/app/components/footer/footer.component.html
+++ b/front-end/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
-<footer class="page-footer font-small cyan darken-3">
+<footer style=" bottom: 0;" class="page-footer font-small cyan darken-3">
 
   <!-- Footer Elements -->
   <div class="container p-4 pb-0">
