create post added

--- a/front-end/src/app/components/post-job/post-job.component.css
+++ b/front-end/src/app/components/post-job/post-job.component.css
@@ -33,7 +33,12 @@ th {
     align-items:left;
  }
 
- .mat-cell.cdk-cell.cdk-column-post.mat-column-post.ng-star-inserted{
+ .mat-header-cell{
+    text-align: center;
+ }
+
+ .mat-cell.cdk-cell.cdk-column-post.mat-column-post.ng-star-inserted,
+ .mat-cell.cdk-cell.cdk-column-desc.mat-column-desc.ng-star-inserted{
 
     padding: 2%;
  }
