--- a/front-end/src/app/components/post-job/post-job.component.html
+++ b/front-end/src/app/components/post-job/post-job.component.html
@@ -5,7 +5,7 @@
         
         </div>
         <div class="col-auto">
-            <button type="button" class="btn btn-outline-success">Create a new Post</button>
+            <button type="button" class="btn btn-outline-success" (click)="goCreate()">Create a new Post</button>
         </div>
       </div>
       <br>
