--- a/front-end/src/app/components/nav/home.component.html
+++ b/front-end/src/app/components/nav/home.component.html
@@ -24,13 +24,13 @@
         <span class="span-mbaro" style="font-weight: bolder;font-family: 'Ink Free'">MBARO PUNE</span>
 
       </div>
-      <span *ngIf="!userLoggedIn"  class="example-spacer"></span>
+      <span *ngIf="!auth.isUserLoggedIn()"  class="example-spacer"></span>
       <div   class="col" style="text-align:right">
       </div>
-        <span *ngIf="!userLoggedIn"  class="example-spacer"></span>
-      <a *ngIf="!(userLoggedIn)" mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" href="signup" tabindex="-1" role="button" >Register
+        <span *ngIf="!auth.isUserLoggedIn()"  class="example-spacer"></span>
+      <a *ngIf="!auth.isUserLoggedIn()" mat-flat-button  class="btn btn-primary btn-lg" id="btn-post" href="signup" tabindex="-1" role="button" >Register
       </a>
-      <div *ngIf="(userLoggedIn )" class="row mr-2 ml-auto">
+      <div *ngIf="auth.isUserLoggedIn()" class="row mr-2 ml-auto">
         <ul class="row m-0 align-items-center">
           <li>
             <button
