--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -1,5 +1,4 @@
-
-
+<div class="container">
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
 
@@ -21,6 +20,9 @@
 
                     </div>
                     <div class="container-fluid" style="margin-top:1%">
+                        <div>
+                            <h1>Title heelooo</h1>
+                        </div>
                         <div>
                             {{(row.readMore) ? row.description : row.description | slice:0:80}} <span  *ngIf="!row.readMore  && (row.length > 80) ">...</span>
                             <a href="javascript:;" *ngIf="!row.readMore && (row.length > 80)" (click)="row.readMore=true">Read More</a>
@@ -74,3 +76,6 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
       </div>
 
+</div>
+
+ 
