image upload bug fixed

--- a/front-end/src/app/components/create-post/create-post.component.css
+++ b/front-end/src/app/components/create-post/create-post.component.css
@@ -4,6 +4,24 @@
     min-width: 200px;
 }
 
+#x {
+    position: absolute;
+    background: red;
+    color: white;
+    top: -10px;
+    right: -10px;
+}
+#containers {
+    /* width: 80%; */
+    /*border-radius: 25px;*/
+    border: 2px solid Black;
+    padding: 15px 15px 15px 15px;
+    margin: 20px 20px 20px 20px;
+    background: #ffffff;
+    overflow: visible;
+    box-shadow: 5px 5px 2px #888888;
+    position: relative;
+  }
 #descInput{
     min-width: 700px;
     min-height:75px;
