--- a/front-end/src/app/components/create-post/create-post.component.html
+++ b/front-end/src/app/components/create-post/create-post.component.html
@@ -113,6 +113,22 @@
             </div>
           </td>
         </tr>
+        <tr>
+          <td>
+
+          </td>
+          <td>
+            <div class="row">
+              <div class="col-md-6 offset-md-3" style="padding: 5%">
+                <button type="button" class="btn btn-outline-success" style="margin-right: 2%">Submit</button>
+                <button type="button" class="btn btn-outline-danger">Cancel</button>
+              </div>
+               
+              
+            </div>
+            
+          </td>
+        </tr>
         </table>
 
   
