--- a/front-end/src/app/components/dashboard/dashboard.component.css
+++ b/front-end/src/app/components/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 #top-container{
-    background-color:#0af564;
+    background-color:white;
     background-image: url('../../../assets/images/aerial-view-business-team.jpg');
     background-size: cover;
     background-repeat: no-repeat;
