web socket connection issue fixed

--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
 
                 <div class="p-2" id="job" (click)="clickDiv('Business')">
                     <div>
-                        <i class="fa fa-briefcase fa-3x"></i>
+                        <i class="fas fa-briefcase fa-3x"></i>
                     </div>
                     <div style="margin-top: 5%">
                         Business & Finance
