--- a/front-end/src/app/components/client/client.component.css
+++ b/front-end/src/app/components/client/client.component.css
@@ -25,6 +25,12 @@ margin-left: -11%;}
     width: 155px;
    }
 @media (max-width: 576px) {
+    #price{
+        font-size: 15px;
+     }
+    h1{
+        font-size: 20px;
+    }
     #dp{
         width: 75px;
     }
@@ -39,7 +45,8 @@ margin-left: -11%;}
     }
    #btn-chat{
     font-size: 12px;
-    width: 55px;
+    width: 65px;
+    height: 40px;
    }
    #icn-chat {
     font-size: 17px;
