--- a/front-end/src/app/components/client/client.component.html
+++ b/front-end/src/app/components/client/client.component.html
@@ -4,16 +4,16 @@
 
           <!-- ID Column -->
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{category}}</th>
             <td mat-cell *matCellDef="let row">
 
 
                 <div class="d-flex justify-content-between">
                     <div class="p-2" id="first-content">
                         <img src="../../../assets/images/NicePng_gray-circle-png_1366211.png" id="dp"  alt="" class="user-image mr-1 p-2" />
-                        <div class="p-2">Bussiness name
+                        <div class="p-2">Bussiness names
                             <div class="d-flex flex-row">
-                                <button type="button" class="btn btn-link" id="btn-see" (click)="seeBusiness()">See more/Pay</button>
+                                <button type="button" class="btn btn-link" id="btn-see" (click)="seeBusiness()">See more /Pay</button>
                             </div>
                         </div>
 
